// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Link should render a Link 1`] = `
.c0 {
  font-style: italic;
  outline: none;
}

.c0:link {
  color: hsl(200,96%,35%);
}

.c0:visited {
  color: hsl(200,18%,45%);
}

.c0:hover {
  color: hsl(200,96%,11%);
}

.c0:focus {
  color: hsl(200,96%,35%);
  background-color: hsla(200,96%,35%,0.3);
}

<div>
  <a
    class="c0"
    href="https://somewhere.over/the/rainbow"
  >
    way up high
  </a>
</div>
`;

exports[`component: Link should support margin space props 1`] = `
.c0 {
  font-style: italic;
  outline: none;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c0:link {
  color: hsl(200,96%,35%);
}

.c0:visited {
  color: hsl(200,18%,45%);
}

.c0:hover {
  color: hsl(200,96%,11%);
}

.c0:focus {
  color: hsl(200,96%,35%);
  background-color: hsla(200,96%,35%,0.3);
}

<div>
  <a
    class="c0"
    href="https://somewhere.over/the/rainbow"
  >
    way up high
  </a>
</div>
`;
